[~] ALF-1617. Контрольно-диагностическая утилита
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5304 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
         <module>lecm-errands</module>
         <module>lecm-permission-exp</module>
         <module>lecm-signed-docflow</module>
+        <module>lecm-diagnostic-utility</module>
     </modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
