--- a/lecm-diagnostic-utility/pom.xml
+++ b/lecm-diagnostic-utility/pom.xml
@@ -9,11 +9,10 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>diagnostic-utility</artifactId>
+    <artifactId>lecm-diagnostic-utility</artifactId>
     <packaging>jar</packaging>
-    <name>Logic ECM  Diagnostic Utility</name>
+    <name>Logic ECM  Diagnostic Utility Programm</name>
     <description>Logic ECM  Diagnostic Utility module</description>
-    <version>0.0.1</version>
 
     <repositories>
         <repository>
@@ -85,6 +84,16 @@
             <version>3.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.0-801.jdbc4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,34 +120,26 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>ru.it.lecm.platform.DiagnosticUtility</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
         <resources>
@@ -148,6 +149,8 @@
                 <targetPath>../</targetPath>
                 <includes>
                     <include>utility-properties.cfg</include>
+                    <include>diagnostic.bat</include>
+                    <include>diagnostic.sh</include>
                 </includes>
             </resource>
         </resources>
