[~] ALF-1617. Контрольно-диагностическая утилита
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5356 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-diagnostic-utility/utility-properties.cfg
+++ b/lecm-diagnostic-utility/utility-properties.cfg
@@ -1,3 +1,4 @@
-alf_home=D:/Project/Alfresco
+alf_home=D:\Project\Alfresco
+alf_java_home=D:\Project\Alfresco\java
 output_dir=.
 admin_password=123456
