утилита диагностики - 1) добавлены скрипты запуска для проверки контрольной суммы 2) сохранение лога оргструктуры в отдельный файл
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5359 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-diagnostic-utility/pom.xml
+++ b/lecm-diagnostic-utility/pom.xml
@@ -150,7 +150,9 @@
                 <includes>
                     <include>utility-properties.cfg</include>
                     <include>diagnostic.bat</include>
+                    <include>checkSum.bat</include>
                     <include>diagnostic.sh</include>
+                    <include>checkSum.sh</include>
                 </includes>
             </resource>
         </resources>
