ALF-1643: Изменить кнопку создания записи в табличном представлении
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5426 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -50,3 +50,5 @@ documents.report.success=Report formed succesfully
 documents.report.failure=Report failed
 
 document.report.default.title=Set report parameters
+
+label.table.row.create.title=Add
