[~] Некоторые доработки по подотчетам
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5453 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -14,6 +14,8 @@ page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
 page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
 page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
 
+page.lecm.reports-subreports=Reports Editor > Reoport > Sub Reports
+
 label.new-report.btn=New Report
 label.create-report.title=Create Report
 label.new-template.btn=New Template
@@ -33,6 +35,8 @@ label.create-source-column.title=Create Source Column
 label.select-source.btn=Select from Template
 label.select-source.title=Select from Template
 label.select.btn=Select
+label.new-subreport.btn=New Subreport
+label.create-subreport.title=Create Subreport
 
 header.reports-editor.label=Reports Editor
 header.reports-editor.description=Reports Editor
