[~] переименованы поля на форме подотчета
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5486 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -1,4 +1,6 @@
 label.report.displayName=Name
+label.subReport.type=Element type
+label.subReport.source=Source
 
 page.lecm.reports-editor=Reports Editor
 
