Редактор форм - конфиг для форм
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5493 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/repo/src/main/config/messages/forms-editor.properties
+++ b/lecm-model-editor/repo/src/main/config/messages/forms-editor.properties
@@ -1,4 +1,5 @@
 lecm-forms-editor_model.type.lecm-forms-editor_form.title=From
+lecm-forms-editor_model.property.lecm-forms-editor_form-evaluator.title=Evaluator
 lecm-forms-editor_model.property.lecm-forms-editor_form-id.title=Form ID
 lecm-forms-editor_model.property.lecm-forms-editor_form-template.title=Form template
 
