--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
@@ -8,11 +8,17 @@ lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-d
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.description=End date
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.title=Stage amount
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=Stage amount
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.title=Status
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.description=Status
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=Responsible
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=Responsible
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.title=Status stages
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.description=Status stages
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=Attachments
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.description=Attachments
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date-real.description=Real end
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date-real.title=Real end
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-comment.description=Comment
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-comment.title=Comment
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.description=Stage state
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.title=State
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date-real.description=Real start
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date-real.title=Real start
