--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -26,6 +26,7 @@ contract.istransmit=Transfer the right to strictly related documents
 contract.creator-ref=Employee
 contract.deprive.right=Delete the author of the participants of the document
 contract.totalAmount=Total sum
+stage.totalAmount=Stage amount
 contract.creator=Initiator
 
 contract.additionalDocumentType=Document type
