[Редактор форм] Сервис конфигурации форм: добавлен функционал для чтения информации о типе форм и правилу расположения полей + небольшой рефакторинг.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5548 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/pom.xml
+++ b/lecm-base/share/pom.xml
@@ -17,6 +17,11 @@
 		and include them in the AMP, they are provided by Alfresco
 	-->
 	<dependencies>
+            <dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.13</version>
+            </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-share</artifactId>
