Добавлена сортировка в отчеты
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5577 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -63,6 +63,8 @@ lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=Repor
 lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=Report Multiplicity?
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.title=Report Query
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.description=Report Query
+lecm-rpeditor_model.property.lecm-rpeditor_reportQuerySort.title=Report Query Sort
+lecm-rpeditor_model.property.lecm-rpeditor_reportQuerySort.description=Report Query Sort
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryOffset.title=QueryOffset
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryOffset.description=QueryOffset
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryLimit.title=QueryLimit
