[+] ALF-1648. Функционал "В работу", "Закрыть" (интерфейсная часть)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -69,6 +69,8 @@ contracts.contractor.createNew=Add a partner
 contract.contractAdditionalDocumentCancel.baseOnDocument=Reason
 
 label.contracts.stage=Stages of the contract
+label.contracts.start-stage=Take
+label.contracts.end-stage=Close stage
 label.contracts.main=Main data
 
 label.contracts.attachments=Contracts > Attachments
