--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
@@ -8,8 +8,8 @@ lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-d
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.description=End date
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.title=Stage amount
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=Stage amount
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=Responsible
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=Responsible
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_stage-currency-assoc.title=Currency
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_stage-currency-assoc.description=Currency
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.title=Status stages
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.description=Status stages
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=Attachments
