Контрол загрузки файлов с предпросмотром -добавлена возможность удаления вложения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5711 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -44,3 +44,5 @@ label.drag-file=Drag file and drop it here or press "+"
 form.control.field-important = IMPORTANT!
 
 message.load.dnd-uploader.failure=Error initialisation flash-uploder
+
+label.file-assoc.delete=Delete
