--- a/lecm-jasperreports-forms/jar/pom.xml
+++ b/lecm-jasperreports-forms/jar/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>documents-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 	<!--
