--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -74,3 +74,5 @@ label.contracts.end-stage=Close stage
 label.contracts.main=Main data
 
 label.contracts.attachments=Contracts > Attachments
+
+message.confirm.delete.stageWithAttachment.description=Are you sure you want to delete this item?
