--- a/lecm-documents-removal/repo/pom.xml
+++ b/lecm-documents-removal/repo/pom.xml
@@ -25,15 +25,29 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-repository</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency>
-        <!-- Don't add here amp dependencies as it will break amp packaging -->
+		<dependency>
+			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-data-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.extensions.surf</groupId>
+			<artifactId>spring-surf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<!-- Don't add here amp dependencies as it will break amp packaging -->
 		<dependency>
 			<groupId>ru.it.lecm.documents-removal</groupId>
 			<artifactId>documents-removal-api</artifactId>
 			<version>${platform.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.documents</groupId>
+			<artifactId>documents-repo-api</artifactId>
+			<version>${platform.version}</version>
+			<scope>provided</scope>
 		</dependency>
     </dependencies>
     <!--
