[~] доработки по Редактору Отчетов: - форма создания колонки разбита по вкладкам - набор данных переименован в Шаблон набора данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5793 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -43,4 +43,7 @@ label.create-subreport.title=Create Subreport
 header.reports-editor.label=Reports Editor
 header.reports-editor.description=Reports Editor
 
+report-column.settings=Settings
+report-column.parameter=Parameter Form
+
 
