ALF-1705: Сделать возможность ручной донастройки форм
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5811 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documentforms/toolbar/toolbar.get.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documentforms/toolbar/toolbar.get.properties
@@ -1,6 +1,10 @@
 button.new-form=Create form
 button.generate-forms=Generate
 button.deploy-forms=Deploy
+button.download-config=Download
+button.upload-config=Upload
 
 message.generate.success=Generate success
 message.deploy.success=Deploy success
+
+message.downloadConfig.notFound=Config not found
