ALF-1717: Поддержка фиктивных полей в редакторе форм
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5829 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
@@ -1,3 +1,4 @@
 label.form.attributeTable.fields.add.title=Add fields
+label.form.attributeTable.fake.field.add.title=Add fake field
 label.form.type=Form type
 label.control.default=Default
