--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<spring.surf.version>1.0.0</spring.surf.version>
 		<!-- <jasperreports.version>4.7.0</jasperreports.version> -->
 		<jasperreports.version>5.0.4</jasperreports.version>
-        <jasperreports.fonts.version>4.0.0</jasperreports.fonts.version>
+		<jasperreports.fonts.version>4.0.0</jasperreports.fonts.version>
 		<slf4j.version>1.5.11</slf4j.version>
 		<spring.security.version>3.1.0.RC2</spring.security.version>
 		<acegisecurity.version>0.8.2</acegisecurity.version>
@@ -72,7 +72,7 @@
 		<buildNumber>1</buildNumber>
 		<client.debug>false</client.debug>
 		<module.log.level>info</module.log.level>
-        <redeploy.process.definitions>false</redeploy.process.definitions>
+		<redeploy.process.definitions>false</redeploy.process.definitions>
 		<repo.jscript.ScriptLogger>info</repo.jscript.ScriptLogger>
 		<apache.cxf.version>2.7.5</apache.cxf.version>
 	</properties>
@@ -82,32 +82,31 @@
 		<module>lecm-security</module>
 		<module>lecm-orgstructure</module>
 		<module>lecm-jasperreports-forms</module>
-        <module>lecm-dictionary</module>
-        <module>lecm-contracts</module>
-        <module>lecm-statemachine</module>
-        <module>lecm-statemachine-editor</module>
-        <module>lecm-theme</module>
-        <module>lecm-delegation</module>
-        <module>lecm-integrotest</module>
-        <module>lecm-subscriptions</module>
-        <module>lecm-notifications</module>
-        <module>lecm-notifications-email</module>
-        <module>lecm-notifications-dashlet</module>
-        <module>lecm-notifications-active-channel</module>
-        <module>lecm-business-journal</module>
-        <module>lecm-calendar</module>
-        <module>lecm-user-profile</module>
-        <module>lecm-documents</module>
-        <module>lecm-regnumbers</module>
-        <module>lecm-contractors</module>
-        <module>lecm-approval</module>
-<!--        <module>lecm-scaner</module>-->
-        <module>lecm-reports-editor</module>
-        <module>lecm-errands</module>
-        <module>lecm-permission-exp</module>
-        <module>lecm-signed-docflow</module>
-        <module>lecm-diagnostic-utility</module>
-    </modules>
+		<module>lecm-dictionary</module>
+		<module>lecm-contracts</module>
+		<module>lecm-statemachine</module>
+		<module>lecm-statemachine-editor</module>
+		<module>lecm-theme</module>
+		<module>lecm-delegation</module>
+		<module>lecm-integrotest</module>
+		<module>lecm-subscriptions</module>
+		<module>lecm-notifications</module>
+		<module>lecm-notifications-email</module>
+		<module>lecm-notifications-dashlet</module>
+		<module>lecm-notifications-active-channel</module>
+		<module>lecm-business-journal</module>
+		<module>lecm-calendar</module>
+		<module>lecm-user-profile</module>
+		<module>lecm-documents</module>
+		<module>lecm-regnumbers</module>
+		<module>lecm-contractors</module>
+		<module>lecm-approval</module>
+		<module>lecm-reports-editor</module>
+		<module>lecm-errands</module>
+		<module>lecm-permission-exp</module>
+		<module>lecm-signed-docflow</module>
+		<module>lecm-documents-removal</module>
+	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
 		<!--<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>-->
@@ -221,11 +220,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-            <dependency>
-                <groupId>net.sf.jasperreports</groupId>
-                <artifactId>jasperreports-fonts</artifactId>
-                <version>${jasperreports.fonts.version}</version>
-            </dependency>
+			<dependency>
+				<groupId>net.sf.jasperreports</groupId>
+				<artifactId>jasperreports-fonts</artifactId>
+				<version>${jasperreports.fonts.version}</version>
+			</dependency>
 			<!--
 			   Example Jar dependency: will be properly packed into the AMP /lib
 			   directory <dependency> <groupId>rome</groupId>
@@ -468,7 +467,7 @@
 					<configuration>
 						<sourceDirectory>${basedir}/src/main/config/reportdefinitions</sourceDirectory>
 						<outputDirectory>${project.build.outputDirectory}/reportdefinitions</outputDirectory>
-                        <compiler>net.sf.jasperreports.engine.design.JRJdtCompiler</compiler>
+						<compiler>net.sf.jasperreports.engine.design.JRJdtCompiler</compiler>
 					</configuration>
 					<executions>
 						<execution>
@@ -564,18 +563,20 @@
 		<profile>
 			<id>redeploy-process-definitions</id>
 			<properties>
-                <redeploy.process.definitions>true</redeploy.process.definitions>			</properties>
+				<redeploy.process.definitions>true</redeploy.process.definitions>
+			</properties>
 		</profile>
-        <profile>
-            <id>non-production-modules</id>
-            <modules>
-                <module>lecm-model-editor</module>
-                <module>lecm-semantic-assist</module>
-                <module>lecm-iReferent-integration</module>
-                <module>lecm-experts</module>
-                <module>lecm-contracts-fake</module>
-                <module>lecm-scaner</module>
-            </modules>
-        </profile>
+		<profile>
+			<id>non-production-modules</id>
+			<modules>
+				<module>lecm-model-editor</module>
+				<module>lecm-semantic-assist</module>
+				<module>lecm-iReferent-integration</module>
+				<module>lecm-experts</module>
+				<module>lecm-contracts-fake</module>
+				<module>lecm-scaner</module>
+				<module>lecm-diagnostic-utility</module>
+			</modules>
+		</profile>
 	</profiles>
 </project>
