--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -284,6 +284,13 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.documents-removal</groupId>
+			<artifactId>documents-removal-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -512,7 +519,7 @@
 					</books>
 				</configuration>
 			</plugin>
-		</plugins>
+	</plugins>
 	</build>
 	<reporting>
 		<plugins>
