ALF-1722: Doc-model-list Вынести в главное меню (вместо машины состояний)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5855 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
@@ -1,3 +1,6 @@
+header.doc-model-list.label=Document models list
+header.doc-model-list.description=Document models list
+
 label.form.attributeTable.fields.add.title=Add fields
 label.form.attributeTable.fake.field.add.title=Add fake field
 label.form.type=Form type
