ALF-1722: Внешний вид
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5856 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
@@ -5,3 +5,8 @@ label.form.attributeTable.fields.add.title=Add fields
 label.form.attributeTable.fake.field.add.title=Add fake field
 label.form.type=Form type
 label.control.default=Default
+
+title.model.delete=Delete model
+title.model.edit=Edit model
+title.forms.edit=Edit forms
+title.statemachine.edit=Edit statemachine
