ALF-1697 Навигация в главном меню редактора отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5857 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/data-source-edit/source-edit.get.properties
@@ -1,13 +1,6 @@
 actions.edit=Edit
 actions.remove=Remove
-label.new-column.btn=New Data Column
-label.save-as-source.btn=Save As
-label.prev.btn=Prev
-label.next.btn=Next
-label.delete.btn=Delete
-
-label.create-column.title=Create Column
-label.save-as-source.title=Save a set of data
+label.edit-row.title=Edit element
 
 message.confirm.delete.group.description=Are you sure you want to delete items?
 message.copy.success=The data set was saved successfully
