--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -2,7 +2,7 @@ label.report.displayName=Name
 label.subReport.type=Element type
 label.subReport.source=Source
 
-page.lecm.reports-editor=Reports Editor
+page.lecm.reports-editor=Reports Editor > Reports List
 
 page.lecm.reports-editor.templates=Reports Editor > Templates
 page.lecm.reports-editor.sources=Reports Editor > Data Sources
@@ -26,7 +26,7 @@ label.new-column-type.btn=New Column Type
 label.create-column-type.title=Create Column Type
 label.new-param-type.btn=New Param Type
 label.create-param-type.title=Create Param Type
-label.new-provider.btn=New Provider
+label.new-provider.btn=New provider
 label.create-provider.title=Create Provider
 label.new-report-type.btn=New Report Type
 label.create-report-type.title=Create Report Type
