[+] ALF-1694. Реализация работы бизнес-журнала с удаленным хранилищем записей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5865 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/log4j.properties
+++ b/lecm-business-journal/repo/src/main/config/log4j.properties
@@ -39,3 +39,5 @@
    #-----------------------------------------------------------------------
   
 log4j.logger.ru.it.lecm.businessjournal=${module.log.level}
+
+log4j.logger.org.apache.activemq=INFO
