[+]добавлены help к форме отчета
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5888 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -46,4 +46,11 @@ header.reports-editor.description=Reports Editor
 report-column.settings=Settings
 report-column.parameter=Parameter Form
 
+report.query.help=Query
+report.code.help=Code
+report.doctype.help=Doc type
+report.sort.help=Sort
+report.multiply.help=Multiply
+report.sub.type.help=Sub Type Help
+report.sub.source.help=Sub Source Help
 
