[~] ALF-1617. Контрольно-диагностическая утилита. Доработки и исправления диагностической утилиты
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5918 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-diagnostic-utility/utility-properties.cfg
+++ b/lecm-diagnostic-utility/utility-properties.cfg
@@ -1,4 +1,5 @@
-alf_home=D:\Alfresco
-alf_java_home="C:\Program Files\Java\jdk1.6.0_35"
+alf_home=D:\Project\Alfresco
+alf_java_home="D:\Project\Java\jdk1.6.0_45x64"
 output_dir=.
+admin_login=admin
 admin_password=123456
