[~] ALF-1751. На вкладке "История" отображается сообщение "lecm-busjournal-aspects:history-list"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5925 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form.properties
@@ -73,3 +73,4 @@ lecm-orgstr_workRole-name=Role Name
 
 label.shedule-control.parent=Default schedule
 label.shedule-control.individual=Individual schedule
+label.history-control=History
