ALF-1728 Хранение моделей данных документов в репозитории добавлено восстановление моделей по-умолчанию
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5944 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
@@ -8,5 +8,6 @@ label.control.default=Default
 
 title.model.delete=Delete model
 title.model.edit=Edit model
+title.model.restore=Restore default model
 title.forms.edit=Edit forms
 title.statemachine.edit=Edit statemachine
