мелкие доводки интерфейса РО
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5949 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -53,4 +53,5 @@ report.sort.help=Sort
 report.multiply.help=Multiply
 report.sub.type.help=Sub Type Help
 report.sub.source.help=Sub Source Help
+column.order.help=Order Help
 
