Редактор форм: добавлена поддержка версионности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5951 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documentforms/toolbar/toolbar.get.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documentforms/toolbar/toolbar.get.properties
@@ -8,3 +8,4 @@ message.generate.success=Generate success
 message.deploy.success=Deploy success
 
 message.downloadConfig.notFound=Config not found
+message.uploadConfig.notFound=Config not found
