Список моделей: добавлена возможность просмотра списка типов в модели с переходом к редактору форм
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5981 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor.properties
@@ -6,6 +6,8 @@ label.form.attributeTable.fake.field.add.title=Add fake field
 label.form.type=Form type
 label.control.default=Default
 
+title.model.expand=Expand
+title.model.collapse=Collapse
 title.model.delete=Delete model
 title.model.edit=Edit model
 title.model.restore=Restore default model
