[~] переделано меню в Редакторе Отчетов - теперь оно работает без перезагрузки страницы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6014 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
@@ -1,10 +1,5 @@
 actions.select=Select
 label.current-template=Current Template
-label.select-template=Current Template
-
-label.unavaiable-page=Unavaiable page
-
-button.new-row=New Template
-label.create-report-dialog=Create Template
+label.select-template=Select Template
 
 button.export-template=Export Template
