--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form.properties
@@ -2,21 +2,7 @@ label.report.displayName=Name
 label.subReport.type=Element type
 label.subReport.source=Source
 
-page.lecm.reports-editor=Reports Editor > Reports List
-
-page.lecm.reports-editor.templates=Reports Editor > Templates
-page.lecm.reports-editor.sources=Reports Editor > Data Sources
-page.lecm.reports-editor.report-types=Reports Editor > Report Types
-page.lecm.reports-editor.providers=Reports Editor > Providers
-page.lecm.reports-editor.column-types=Reports Editor > Column Types
-page.lecm.reports-editor.param-types=Reports Editor > Param Types
-
-page.lecm.reports-editor.report-info=Reports Editor > Report > Info
-page.lecm.reports-editor.add-source=Reports Editor > Report > Set Source
-page.lecm.reports-editor.edit-source=Reports Editor > Report > Edit Source
-page.lecm.reports-editor.edit-template=Reports Editor > Report > Edit Template
-
-page.lecm.reports-subreports=Reports Editor > Reoport > Sub Reports
+page.lecm.reports-editor=Reports Editor
 
 label.new-report.btn=New Report
 label.create-report.title=Create Report
@@ -54,4 +40,7 @@ report.multiply.help=Multiply
 report.sub.type.help=Sub Type Help
 report.sub.source.help=Sub Source Help
 column.order.help=Order Help
+
+actions.deploy=Deploy
+actions.save=Save
 
