ALF-1774: Форма редактирования свойств этапа: изменить заголовок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6021 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -76,3 +76,6 @@ label.contracts.main=Main data
 label.contracts.attachments=Contracts > Attachments
 
 message.confirm.delete.stageWithAttachment.description=Are you sure you want to delete this item?
+
+stage.edit.form.title=Edit stage
+stage.create.form.title=Create stage
