ALF-1775 Форма просмотра свойств этапа: верстка [+] Поручения в верхнем меню
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6052 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form.properties
@@ -10,6 +10,9 @@ page.errands.filter.label=(filtered)
 header.errands-list.label=Errands
 header.errands-list.description=Errands
 
+header.errands-list-32.label=Errands
+header.errands-list-32.description=Errands
+
 tool.errands-settings.label=Errands settings
 tool.errands-settings.description=Errands settings
 
