--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 		<module>lecm-permission-exp</module>
 		<module>lecm-signed-docflow</module>
 		<module>lecm-documents-removal</module>
+        <module>lecm-incoming</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
