--- a/lecm-incoming/repo/pom.xml
+++ b/lecm-incoming/repo/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-repository</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>org.alfresco</groupId>
+		    <artifactId>alfresco-data-model</artifactId>
+	    </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -73,6 +77,10 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+	    <dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
