ALF-1784: Экранные формы входящего - иконки для контрола для выбора получателя
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6090 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming.properties
+++ b/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming.properties
@@ -11,3 +11,6 @@ page.lecm-incoming_document=Incoming
 button.lecm-incoming_document.new=New Incoming
 label.create-lecm-incoming_document=Create Incoming
 label.filter-lecm-incoming_document=Incoming
+
+title.employee.select=Employee select
+title.organizationUnit.select=Organization unit select
