--- a/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model.properties
@@ -6,3 +6,5 @@ lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count
 lecm-document-aspects_aspects.association.lecm-document-aspects_parent-document-assoc.title=Parent document
 
 lecm-document-aspects_aspects.association.lecm-document-aspects_response-to-assoc.title=Response to
+
+lecm-document-aspects_aspects.property.lecm-document-aspects_is-shared-folder.title=Is shared folder
