заготовка под модуль "Исходящие"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6137 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -291,20 +291,27 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
-        <dependency>
-            <groupId>ru.it.lecm.incoming</groupId>
-            <artifactId>incoming-repo</artifactId>
-            <version>${platform.version}</version>
-            <scope>runtime</scope>
-            <type>amp</type>
-        </dependency>
-        <dependency>
-            <groupId>ru.it.lecm.model-editor</groupId>
-            <artifactId>model-editor-repo</artifactId>
-            <version>${platform.version}</version>
-            <scope>runtime</scope>
-            <type>amp</type>
-        </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.incoming</groupId>
+			<artifactId>incoming-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.outgoing</groupId>
+			<artifactId>outgoing-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.model-editor</groupId>
+			<artifactId>model-editor-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -533,7 +540,7 @@
 					</books>
 				</configuration>
 			</plugin>
-	</plugins>
+		</plugins>
 	</build>
 	<reporting>
 		<plugins>
