--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 			<id>alfresco-activiti</id>
 			<url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
 		</repository>
-        <repository>
+		<repository>
 			<id>apache-activemq</id>
 			<url>https://repository.apache.org/content/repositories/releases/org/apache/activemq/apache-activemq/</url>
 		</repository>
@@ -110,8 +110,9 @@
 		<module>lecm-permission-exp</module>
 		<module>lecm-signed-docflow</module>
 		<module>lecm-documents-removal</module>
-        <module>lecm-incoming</module>
-        <module>lecm-model-editor</module>
+		<module>lecm-incoming</module>
+		<module>lecm-outgoing</module>
+		<module>lecm-model-editor</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
@@ -191,11 +192,11 @@
 				<version>${spring.version}</version>
 				<scope>provided</scope>
 			</dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-jms</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jms</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
 				<artifactId>jasperreports</artifactId>
@@ -365,16 +366,16 @@
 				<artifactId>cxf-rt-transports-http</artifactId>
 				<version>${apache.cxf.version}</version>
 			</dependency>
-            <dependency>
-                <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-all</artifactId>
-                <version>5.9.0</version>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-all</artifactId>
+				<version>5.9.0</version>
 			</dependency>
-            <dependency>
-                <groupId>org.apache.xbean</groupId>
-                <artifactId>xbean-spring</artifactId>
-                <version>3.6</version>
-            </dependency>
+			<dependency>
+				<groupId>org.apache.xbean</groupId>
+				<artifactId>xbean-spring</artifactId>
+				<version>3.6</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
