--- a/lecm-incoming/repo/pom.xml
+++ b/lecm-incoming/repo/pom.xml
@@ -115,6 +115,10 @@
                 <groupId>org.alfresco.maven.plugin</groupId>
                 <artifactId>maven-amp-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jasperreports-maven-plugin</artifactId>
+            </plugin>
         </plugins>
         <resources>
             <resource>
