--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/connections/list/connections.list.get.properties
@@ -8,3 +8,5 @@ message.confirm.delete.title=Delete connection
 message.confirm.delete.description=Are you sure you want to delete this item?
 message.delete.success=Success delete
 message.delete.failure=Failure delete
+label.link-tree=Tree of linked documents
+label.link-list=Document links list
