ALF-1787: 3.4	Регистрация входящего 3.13	Проверка на повторность: - искать похожие
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6148 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming.properties
+++ b/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming.properties
@@ -14,3 +14,5 @@ label.filter-lecm-incoming_document=Incoming
 
 title.employee.select=Employee select
 title.organizationUnit.select=Organization unit select
+
+label.search.similar=Search similar
