--- a/lecm-notifications/repo/src/main/config/messages/notifications_settings.properties
+++ b/lecm-notifications/repo/src/main/config/messages/notifications_settings.properties
@@ -1,5 +1,6 @@
-lecm-notf-settings_model.type.lecm-notf-settings_base.title=Notifications base settings
-lecm-notf-settings_model.association.lecm-notf-settings_default-types-assoc.title=Default notifications channel
-
 lecm-notf-settings_model.type.lecm-notf-settings_global.title=Notifications global settings
+lecm-notf-settings_model.property.lecm-notf-settings_enable-passive.title=Enable passive notifications
+lecm-notf-settings_model.property.lecm-notf-settings_n-days.title=N days
+
 lecm-notf-settings_model.type.lecm-notf-settings_user.title=Notifications user settings
+lecm-notf-settings_model.association.lecm-notf-settings_default-types-assoc.title=Default notifications channel
