ALF-1788: 3.5	Направить на рассмотрение - Заготовка процесса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6178 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-workflow.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-workflow.properties
@@ -1,1 +1,3 @@
 lecmIncomingWf_model.association.lecmIncomingWf_repeatedToDocument.title=Repetable document
+
+lecmIncomingWf_model.association.lecmIncomingWf_sendToReviewRecipient.title=Recipient
