[+] ALF-1790. 3.9 Направление на исполнение
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6182 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
@@ -33,3 +33,5 @@ lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.title=Delive
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.description=Delivery Method
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.title=Recipient
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.description=Recipient
+lecmIncomingWf_model.association.lecmIncomingWf_recipient.description=Recipient
+lecmIncomingWf_model.association.lecmIncomingWf_recipient.title=Recipient
