[ВАЖНО] ALF-1843  Базовый тип для СЭД Примечание: после этого коммита почти наверняка придеться чистить базу и репозиторий из-за серьезных изменений в модели
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6189 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -2,6 +2,8 @@ lecm-document_model.property.lecm-document_regnum.title=Registration number
 lecm-document_model.property.lecm-document_regnum.description=Registration number
 lecm-document_model.property.lecm-document_creator.title=Author
 lecm-document_model.property.lecm-document_creator.description=Author
+lecm-document_model.property.lecm-document_doc-type.title=Doc Type
+lecm-document_model.property.lecm-document_doc-type.description=Doc Type
 
 lecm-connect_dictionary-connection.type.lecm-connect_connection.title=Connections
 lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=Primary document
