--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 		<module>lecm-incoming</module>
 		<module>lecm-outgoing</module>
 		<module>lecm-model-editor</module>
+        <module>lecm-eds-documents</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
