--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -235,6 +235,13 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.eds-documents</groupId>
+            <artifactId>eds-documents-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 		<dependency>
 			<groupId>ru.it.lecm.incoming</groupId>
 			<artifactId>incoming-share</artifactId>
