--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
@@ -1,12 +1,12 @@
 lecm-incoming_model.type.lecm-incoming_document.title=Incoming document
 lecm-incoming_model.type.lecm-incoming_document.description=Incoming document
 
-lecm-incoming_model.property.lecm-incoming_note.title=Note
-lecm-incoming_model.property.lecm-incoming_note.description=Note
-lecm-incoming_model.property.lecm-incoming_title.title=Note
-lecm-incoming_model.property.lecm-incoming_title.description=Note
-lecm-incoming_model.property.lecm-incoming_summaryContent.title=Summary Content
-lecm-incoming_model.property.lecm-incoming_summaryContent.description=Summary Content
+lecm-incoming_model.property.lecm-eds-document_note.title=Note
+lecm-incoming_model.property.lecm-eds-document_note.description=Note
+lecm-incoming_model.property.lecm-document_title.title=Note
+lecm-incoming_model.property.lecm-document_title.description=Note
+lecm-incoming_model.property.lecm-eds-document_summaryContent.title=Summary Content
+lecm-incoming_model.property.lecm-eds-document_summaryContent.description=Summary Content
 lecm-incoming_model.property.lecm-incoming_is-on-control.title=Is On Control
 lecm-incoming_model.property.lecm-incoming_is-on-control.description=Is On Control
 lecm-incoming_model.property.lecm-incoming_is-not-registered.title=Is Not Registered
@@ -21,14 +21,14 @@ lecm-incoming_model.property.lecm-incoming_execution-date.description=Execution 
 
 lecm-incoming_model.association.lecm-incoming_registrator-assoc.title=Registrator
 lecm-incoming_model.association.lecm-incoming_registrator-assoc.description=Registrator
-lecm-incoming_model.association.lecm-incoming_file-register-assoc.title=File Register
-lecm-incoming_model.association.lecm-incoming_file-register-assoc.description=File Register
-lecm-incoming_model.association.lecm-incoming_document-type-assoc.title=Document Type
-lecm-incoming_model.association.lecm-incoming_document-type-assoc.description=Document Type
+lecm-incoming_model.association.lecm-eds-document_file-register-assoc.title=File Register
+lecm-incoming_model.association.lecm-eds-document_file-register-assoc.description=File Register
+lecm-incoming_model.association.lecm-eds-document_document-type-assoc.title=Document Type
+lecm-incoming_model.association.lecm-eds-document_document-type-assoc.description=Document Type
 lecm-incoming_model.association.lecm-incoming_links-assoc.title=Links
 lecm-incoming_model.association.lecm-incoming_links-assoc.description=Links
-lecm-incoming_model.association.lecm-incoming_subject-assoc.title=Subject
-lecm-incoming_model.association.lecm-incoming_subject-assoc.description=Subject
+lecm-incoming_model.association.lecm-document_subject-assoc.title=Subject
+lecm-incoming_model.association.lecm-document_subject-assoc.description=Subject
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.title=Delivery Method
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.description=Delivery Method
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.title=Recipient
