--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model.properties
@@ -55,6 +55,7 @@ lecm-errands_model.type.lecm-errands_settings.title=Errand settings
 lecm-errands_model.type.lecm-errands_settings.description=Errand settings
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=Mode choosing executors
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=Mode choosing executors
+lecm-errands_model.property.lecm-errands_settings-transfer-rights.title=Transfer rights to document-base
 
 
 lecm-errands_model.type.lecm-errands_user-settings.title=Errand user settings
