[+] ALF-1785. 3.3.1 Потоковое сканирование [+] ALF-1786. 3.3.2 Документы, поступившие по e-mail
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6234 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model.properties
@@ -35,3 +35,9 @@ lecm-incoming_model.association.lecm-incoming_recipient-assoc.title=Recipient
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.description=Recipient
 lecmIncomingWf_model.association.lecmIncomingWf_recipient.description=Recipient
 lecmIncomingWf_model.association.lecmIncomingWf_recipient.title=Recipient
+
+repositoryReceiverExecutor.title=Logic ECM. Create Incoming Document
+repositoryReceiverExecutor.description=Logic ECM. Create Incoming Document
+
+emailRepositoryReceiverExecutor.title=Logic ECM. Create Email Incoming Document
+emailRepositoryReceiverExecutor.description=Logic ECM. Create Email Incoming Document
